--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- END nav -->
     <div class="hero-wrap">
 	    <div class="home-slider owl-carousel">
-	      <div class="slider-item" style="background-image:url(images/bg_1.jpg);">
+	      <div class="slider-item" style="background-image:url(bg_1.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -71,7 +71,7 @@
 	        </div>
 	      </div>
 
-	      <div class="slider-item" style="background-image:url(images/bg_2.jpeg);">
+	      <div class="slider-item" style="background-image:url(bg_2.jpeg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -85,7 +85,7 @@
 	        </div>
 	      </div>
 
-	      <div class="slider-item" style="background-image:url(images/bg_3.jpeg);">
+	      <div class="slider-item" style="background-image:url(bg_3.jpeg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -180,8 +180,8 @@
     	<div class="container">
     		<div class="row d-flex no-gutters">
     			<div class="col-md-6 d-flex">
-    				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(images/rjlogo.PNG);">
-    					<a href="images/RAJENGINEERS1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
+    					<a href="RAJENGINEERS1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
@@ -277,8 +277,8 @@
 		  <div class="container-fluid px-md-0">
         <div class="row no-gutters">
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-1.jpg);">
-            	<a href="images/work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-1.jpg);">
+            	<a href="work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -290,8 +290,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-2.jpeg);">
-            	<a href="images/work-2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-2.jpeg);">
+            	<a href="work-2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -303,8 +303,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-3.jpeg);">
-            	<a href="images/work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-3.jpeg);">
+            	<a href="work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -317,8 +317,8 @@
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-4.jpeg);">
-            	<a href="images/work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-4.jpeg);">
+            	<a href="work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -343,8 +343,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-6.jpeg);">
-            	<a href="images/work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-6.jpeg);">
+            	<a href="work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
