--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     		<div class="row d-flex no-gutters">
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
-    					<a href="RAJENGINEERS1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    					<a href="RajEngineers1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
@@ -330,8 +330,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-5.jpeg);">
-            	<a href="images/work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-5.jpeg);">
+            	<a href="work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
