--- a/about.html
+++ b/about.html
@@ -9,17 +9,17 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="animate.css">
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="owl.carousel.min.css">
+    <link rel="stylesheet" href="owl.theme.default.min.css">
+    <link rel="stylesheet" href="magnific-popup.css">
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+    <link rel="stylesheet" href="ionicons.min.css">
 
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="icomoon.css">
+    <link rel="stylesheet" href="style.css">
     <!-- link for fontAwesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   </head>
@@ -73,8 +73,8 @@
     	<div class="container">
     		<div class="row d-flex no-gutters">
     			<div class="col-md-6 d-flex">
-    				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(images/rjlogo.PNG);">
-    					<a href="images/RAJENGINEERS1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
+    					<a href="RajEngineers1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
@@ -170,8 +170,8 @@
 		  <div class="container-fluid px-md-0">
         <div class="row no-gutters">
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-1.jpg);">
-            	<a href="images/work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-1.jpg);">
+            	<a href="work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -183,8 +183,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-2.jpeg);">
-            	<a href="images/work-2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-2.jpeg);">
+            	<a href="work-2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -196,8 +196,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-3.jpeg);">
-            	<a href="images/work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-3.jpeg);">
+            	<a href="work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -210,8 +210,8 @@
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-4.jpeg);">
-            	<a href="images/work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-4.jpeg);">
+            	<a href="work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -223,8 +223,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-5.jpeg);">
-            	<a href="images/work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-5.jpeg);">
+            	<a href="work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -236,8 +236,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-6.jpeg);">
-            	<a href="images/work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(work-6.jpeg);">
+            	<a href="work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -264,8 +264,8 @@
 								<h2 class="footer-heading">About us</h2>
 								<p>We have been in this field since 1999.</p>
 								<ul class="ftco-footer-social p-0">
-		              <li class="ftco-animate"><a href="https://m.facebook.com/chetan.udr?ref=bookmarks" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
-		              <li class="ftco-animate"><a href="https://www.instagram.com/_chetan4014/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+		              <li class="ftco-animate"><a href="https://m.facebook.com/chetan.udr?ref=bookmarks" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook-square"></span></a></li>
+		              <li class="ftco-animate"><a href="https://www.instagram.com/_chetan4014/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-instagram-square"></span></a></li>
 		            </ul>
 							</div>
               <div class="col-md-6 mb-md-0 mb-6">
@@ -297,20 +297,19 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="jquery-migrate-3.0.1.min.js"></script>
+  <script src="popper.min.js"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="jquery.easing.1.3.js"></script>
+  <script src="jquery.waypoints.min.js"></script>
+  <script src="jquery.stellar.min.js"></script>
+  <script src="jquery.animateNumber.min.js"></script>
+  <script src="owl.carousel.min.js"></script>
+  <script src="jquery.magnific-popup.min.js"></script>
+  <script src="scrollax.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 
   </body>
 </html>
