--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('bg_1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
@@ -265,7 +265,7 @@
 								<p>We have been in this field since 1999.</p>
 								<ul class="ftco-footer-social p-0">
 		              <li class="ftco-animate"><a href="https://m.facebook.com/chetan.udr?ref=bookmarks" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook-square"></span></a></li>
-		              <li class="ftco-animate"><a href="https://www.instagram.com/_chetan4014/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-instagram-square"></span></a></li>
+		              <li class="ftco-animate"><a href="https://www.instagram.com/_chetan4014/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-instagram"></span></a></li>
 		            </ul>
 							</div>
               <div class="col-md-6 mb-md-0 mb-6">
