--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
 				        			<span class="fa fa-phone"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Phone:</span> <a href="tel://1234567920">+91 9414290236</a></p>
+					            <p><span>Phone:</span> <a href="tel:9414290236">+91 9414290236</a></p>
 					          </div>
 				          </div>
 								</div>
