--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	          <div class="row no-gutters slider-text align-items-center justify-content-center">
 		          <div class="col-md-12 ftco-animate">
 		          	<div class="text w-100 text-center">
-		          		<h2>We Build your home1</h2>
+		          		<h2>We Build your home</h2>
 			            <h1 class="mb-3">Secure & Safe</h1>
 		            </div>
 		          </div>
@@ -369,7 +369,7 @@
 						<div class="row">
 							<div class="col-md-8 mb-md-0 mb-8">
 								<h2 class="footer-heading">About us</h2>
-								<p>We have been in this field since 1999.</p>
+								<p>We have been in this field since 1995.</p>
 								<ul class="ftco-footer-social p-0">
 		              <li class="ftco-animate"><a href="https://m.facebook.com/chetan.udr?ref=bookmarks" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook-square"></span></a></li>
 		              <li class="ftco-animate"><a href="https://www.instagram.com/_chetan4014/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-instagram"></span></a></li>
