--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     		<div class="row d-flex no-gutters">
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
-    					<a href="RajEngineers1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    					<a href="RajEngineers.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
