--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
     		<div class="row d-flex no-gutters">
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
-    					<a href="RajEngineers1.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    					<a href="RajEngineers.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
@@ -262,7 +262,7 @@
 						<div class="row">
 							<div class="col-md-8 mb-md-0 mb-8">
 								<h2 class="footer-heading">About us</h2>
-								<p>We have been in this field since 1999.</p>
+								<p>We have been in this field since 1995.</p>
 								<ul class="ftco-footer-social p-0">
 		              <li class="ftco-animate"><a href="https://m.facebook.com/chetan.udr?ref=bookmarks" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook-square"></span></a></li>
 		              <li class="ftco-animate"><a href="https://www.instagram.com/_chetan4014/?hl=en" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-instagram"></span></a></li>
