--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
     					<a href="RajEngineers.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-    						<span class="icon-play"></span>
+    						<span class="fas fa-play"></span>
     					</a>
     				</div>
     			</div>
@@ -279,7 +279,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-1.jpg);">
             	<a href="work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -292,7 +292,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-2.jpeg);">
             	<a href="work-2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -305,7 +305,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-3.jpeg);">
             	<a href="work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -319,7 +319,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-4.jpeg);">
             	<a href="work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -332,7 +332,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-5.jpeg);">
             	<a href="work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -345,7 +345,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-6.jpeg);">
             	<a href="work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
