--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(rjlogo.PNG);">
     					<a href="RajEngineers.mp4" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-    						<span class="icon-play"></span>
+    						<span class="fas fa-play"></span>
     					</a>
     				</div>
     			</div>
@@ -172,7 +172,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-1.jpg);">
             	<a href="work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -185,7 +185,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-2.jpeg);">
             	<a href="work-2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -198,7 +198,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-3.jpeg);">
             	<a href="work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -212,7 +212,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-4.jpeg);">
             	<a href="work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -238,7 +238,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-6.jpeg);">
             	<a href="work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
